# my_model

./: .dockerignore  .gitignore  README.md  deploy_modal.py  main.py  pyproject.toml  start.sh
api/v1/: routes.py
services/: vllm_service.py
