[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "aiohttp>=3.12.13",
    "bitsandbytes>=0.46.1",
    "fastapi>=0.115.9",
    "flashinfer-python>=0.3.1",
    "gunicorn>=23.0.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.68",
    "langgraph>=0.6.1",
    "miniopy-async>=1.23.2",
    "modal>=1.2.1",
    "numpy>=2.2.6",
    "nvidia-ml-py>=13.580.65",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.46.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.4",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.54.1",
    "uvicorn>=0.34.3",
    "uvicorn-worker>=0.3.0",
    "vllm==0.10.1.1",
]

# Tell uv which index to use for PyTorch per platform:
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Register the CUDA 12.8 wheel index (only used for the packages above)
[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true
